# disciple

./: CMakeLists.txt  README.md
FreeRTOS/include/: FreeRTOSConfig.h
audio/: filter_biquad.cpp  filter_biquad.h  filter_variable.cpp  filter_variable.h  utils.cpp  utils.h  vca.h
audio/utility/: dspinst.h
cmake/: teensy-arm.toolchain.cmake
instruments/: HHClosed.h  Snare.h  kick.h  uton.h
src/: assert.h  compat.h  config.cpp  config.h  dsp_out.cpp  dsp_out.h  hw.cpp  hw.h  macros.h  main.cpp  menu.cpp  menu.h  mk20dx128.c  mk20dx128.c~  pins_teensy.c  rack.cpp  rack.h  seq.cpp  seq.h  static_instruments.cpp  static_instruments.h  static_menus.cpp  static_menus.h  taskTFT.cpp  taskTFT.h
